# belajar_rest_actix

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  package.json
.cargo/: config.toml
src/: app_data.rs  main.rs
src/api/: base.rs  coba_query_param.rs  error_response.rs  mod.rs
templates/: index.html
